# DLFM

./: .gitignore  CMakeLists.txt  README.md
include/common/: basic.h  cost_helper.h  deserialize.h  device.h  element_type.h  exception.h  shape.h  tensor.h  tensor_storage.h
include/math/: adaptive_avg_pooling2d.h  adaptive_max_pooling2d.h  avg_pooling2d.h  batch_norm2d.h  binary_cwise.h  cast.h  cat.h  clamp.h  conv2d.h  conv_transpose2d.h  fill.h  img_mask.h  instance_norm2d.h  log.h  matmul.h  max_pooling2d.h  max_unpooling2d.h  mean.h  neon_mathfun.h  norm2d.h  pad.h  reflection_pad2d.h  relu.h  reverse.h  sigmoid.h  slice.h  softmax.h  sqrt.h  square.h  sum.h  tanh.h  topk.h  transpose.h  unary_cwise.h  upsample2d.h  var.h
include/module/: batch_norm2d.h  cartoon_transformer.h  conv2d.h  conv_transpose2d.h  dropout.h  instance_norm2d.h  linear.h  max_pooling2d.h  module.h  named_parameters.h  prelu.h  reflection_pad2d.h  relu.h  relu6.h  sequential.h  sigmoid.h  tanh.h  tiny_unet.h  unet.h  upsample2d.h  zero_pad2d.h
include/network/: anime_face.h  anime_face_tiny.h  blaze_face.h  cartoon_face.h  cartoon_transformer.h  dcgan.h  face_mesh.h  h3r.h  hair_seg.h  human_seg.h  pfld.h  pfld_lite.h  portrait_net.h  segnet.h  selfie2anime.h  slim.h  srgan.h  srresnet.h  style_transformer.h  tiny_unet.h  ugatit_tiny.h  unit.h  vdsr.h
include/vision/: convert.h  crop.h  pad.h  resample.h  rotate.h
ios/: CMakeLists.txt
ios/toolchain/: iOS.cmake
src/common/: cost_helper.cc  deserialize.cc  device.cc  shape.cc  tensor.cc  tensor_methods.cc  tensor_storage.cc
src/math/: adaptive_avg_pooling2d.cc  adaptive_max_pooling2d.cc  avg_pooling2d.cc  batch_norm2d.cc  binary_cwise.cc  cast.cc  cat.cc  clamp.cc  conv2d.cc  conv_transpose2d.cc  fill.cc  img_mask.cc  instance_norm2d.cc  log.cc  matmul.cc  max_pooling2d.cc  max_unpooling2d.cc  mean.cc  norm2d.cc  pad.cc  reflection_pad2d.cc  relu.cc  reverse.cc  sigmoid.cc  slice.cc  softmax.cc  sqrt.cc  square.cc  sum.cc  tanh.cc  topk.cc  transpose.cc  unary_cwise.cc  upsample2d.cc  var.cc
src/module/: batch_norm2d.cc  cartoon_transformer.cc  conv2d.cc  conv_transpose2d.cc  dropout.cc  instance_norm2d.cc  linear.cc  max_pooling2d.cc  module.cc  named_parameters.cc  prelu.cc  reflection_pad2d.cc  relu.cc  relu6.cc  sequential.cc  sigmoid.cc  tanh.cc  tiny_unet.cc  unet.cc  upsample2d.cc  zero_pad2d.cc
src/network/: anime_face.cc  anime_face_tiny.cc  blaze_face.cc  cartoon_face.cc  cartoon_transformer.cc  dcgan.cc  face_mesh.cc  h3r.cc  hair_seg.cc  human_seg.cc  pfld.cc  pfld_lite.cc  portrait_net.cc  segnet.cc  selfie2anime.cc  slim.cc  srgan.cc  srresnet.cc  style_transformer.cc  tiny_unet.cc  ugatit_tiny.cc  unit.cc  vdsr.cc
src/vision/: convert.cc  crop.cc  pad.cc  resample.cc  rotate.cc
test/: cast_test.cc  cast_test.h  cat_test.cc  cat_test.h  conv2d_test.cc  conv2d_test.h  conv_transpose2d_test.cc  conv_transpose2d_test.h  main.cc  matmul_test.cc  matmul_test.h  max_pooling2d_test.cc  max_pooling2d_test.h  mean_test.cc  mean_test.h  pad_test.cc  pad_test.h  selfie2anime_test.cc  selfie2anime_test.h  test.cc  test.h  transpose_test.cc  transpose_test.h  unet_test.cc  unet_test.h  upsample2d_test.cc  upsample2d_test.h
